--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,21 +11,12 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: npm run build --if-present
-
-  zip:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: Archive Release
-      uses: thedoctor0/zip-release@0.7.5
-      with:
-        directory: './dist'
-        type: 'zip'
-        filename: 'release.zip'
-          
-  release:
-    runs-on: ubuntu-latest
-    steps:
+      - name: Archive Release
+        uses: thedoctor0/zip-release@0.7.5
+        with:
+          path: './dist'
+          type: 'zip'
+          filename: 'release.zip'
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
