--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,26 @@
 name: Create Archive
 on: [push]
 jobs:
-  build:
+  tag:
+    name: Create tag
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Get version info
+        id: version_info
+        run: |
+          echo "build_version=v0.0.${{ github.run_number }}" >> $GITHUB_OUTPUT
+        shell: bash
+      - name: Create tag
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'refs/tags/${{ steps.version_info.outputs.build_version }}',
+              sha: context.sha
+            })
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -11,21 +30,14 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: npm run build --if-present
-
-  zip:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Archive Release
-      uses: thedoctor0/zip-release@0.7.5
-      with:
-        path: './dist'
-        type: 'zip'
-        filename: 'release.zip'
-          
-  release:
-    runs-on: ubuntu-latest
-    steps:
+      - name: Zip Release
+        uses: thedoctor0/zip-release@0.7.5
+        with:
+          path: './dist'
+          type: 'zip'
+          filename: 'release.zip'
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: release.zip
+          tag_name: ${{ steps.version_info.outputs.build_version }}
