--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Release
-on: push
-  branches:
-    - 'main'
+on: 
+  push:
+    branches:
+      - 'main'
 jobs:
   release:
     runs-on: ubuntu-latest
