--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           token: ${{ secrets.SECRET_TOKEN }}
-          files: release.zip
+          files: ./dist/release.zip
           tag_name: v0.0.${{ github.run_number }}
